--- a/public/app.css
+++ b/public/app.css
@@ -451,7 +451,8 @@ section.feature_compare table span.ln {
   color: #dde3e3;
 }
 section.feature_compare table span.fn {
-  background: #00cc9b33;
+  background: #00CC9B1A;
+  
   color: #00cc9b;
 }
 section.feature_compare table tr:nth-child(1) span.ln {
@@ -459,9 +460,14 @@ section.feature_compare table tr:nth-child(1) span.ln {
   font-size: 24px;
 }
 section.feature_compare table tr:nth-child(1) span.fn {
-  background: #00cc9b33;
+  background: #00CC9B33;
 
   font-size: 24px;
+}
+section.feature_compare p{
+  text-align: left;
+  width: 100%;
+  text-indent: 34%;
 }
 section.common .meteor_line_1 {
   margin-top: 30px;
@@ -565,7 +571,7 @@ section.common .common_info p {
 }
 .youtube{
   width: 100%;
-  height: 768px;
+  height: 660px;
   background-repeat: no-repeat;
   background-size: contain;
   display: flex;
@@ -748,7 +754,10 @@ section.common .common_info p {
 
     font-size: 16px;
   }
-
+  section.feature_compare p{
+    text-indent: 0;
+    padding-left: 34%;
+  }
   section.common .common_main {
     width: 100%;
   }
