--- a/public/app.css
+++ b/public/app.css
@@ -572,9 +572,15 @@ section.common .common_info p {
   text-decoration: none;
   color: #fff;
 }
+.youtube_box{
+  display: flex;
+  padding:20px 0;
+  justify-content: space-around;
+}
 .youtube{
-  width: 100%;
-  height: 600px;
+  
+  width:580px;
+  height: 480px;
   background-repeat: no-repeat;
   background-size: contain;
   display: flex;
@@ -582,7 +588,7 @@ section.common .common_info p {
   justify-content: center;
 }
 .youtube svg{
-  width: 120px;
+  width: 60px;
 }
 @media (max-device-width: 750px) {
   section {
