--- a/public/app.css
+++ b/public/app.css
@@ -250,8 +250,8 @@ main{
   height: 100vh;
   overflow-y:scroll;
   overflow-x: hidden;
-  scroll-snap-type: both mandatory;
 }
+#main{ scroll-snap-type: both mandatory;}
 .snap_block{
   scroll-snap-align:  start ;
 
@@ -576,6 +576,7 @@ section.common .common_info p {
   display: flex;
   padding:20px 0;
   justify-content: space-around;
+  width: 100%;
 }
 .youtube{
   
