--- a/public/app.css
+++ b/public/app.css
@@ -357,6 +357,13 @@ section.works h2 {
   text-align: left;
   padding: 20px 0;
 }
+
+@media (min-width: 750px) {
+  section.works h2 {
+    margin-top: 70px;
+  }
+}
+
 section.works .meteor_line {
   position: absolute;
   width: 100%;
@@ -373,6 +380,7 @@ section.feature {
   justify-content: center;
   align-items: center;
 }
+
 .feature_main {
   width: 1200px;
 
@@ -692,6 +700,7 @@ section.common .common_info p {
     text-indent: 16%;
   }
   section.feature {
+    margin-top: 120px;
     display: block;
   }
   .feature_main {
@@ -938,8 +947,19 @@ section.common .common_info p {
   .tutorials ul li a {
     font-size: 18px;
   }
+
+  .youtube_box{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding:20px 0;
+    justify-content: space-around;
+    width: 100%;
+  }
+
   .youtube{
     height: 192px;
+    width: 100%;
   }
   .youtube svg{
     width: 80px;
