--- a/public/app.css
+++ b/public/app.css
@@ -325,6 +325,7 @@ section h1 {
   -webkit-background-size: 388px;
   color: rgba(255, 255, 255, 0.1);
   /*-webkit-text-fill-color:transparent;*/
+
   animation: ani 2s linear infinite;
 }
 .section1  p{
@@ -355,6 +356,11 @@ section.works h2 {
   width: 100%;
   text-align: left;
   padding: 20px 0;
+}
+@media (min-width: 750px) {
+  section.works h2 {
+    margin-top: 70px;
+  }
 }
 section.works .meteor_line {
   position: absolute;
@@ -691,6 +697,7 @@ section.common .common_info p {
     text-indent: 16%;
   }
   section.feature {
+    margin-top: 120px;
     display: block;
   }
   .feature_main {
@@ -937,8 +944,17 @@ section.common .common_info p {
   .tutorials ul li a {
     font-size: 18px;
   }
+  .youtube_box{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding:20px 0;
+    justify-content: space-around;
+    width: 100%;
+  }
   .youtube{
     height: 192px;
+    width: 100%;
   }
   .youtube svg{
     width: 80px;
