fix: background layout gradient color

--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -33,7 +33,7 @@ const currentPathname =
 		: Astro.url.pathname;
 ---
 
-<nav class="bg-[#E6D3FF] flex items-center justify-between py-4 px-20">
+<nav class="flex items-center justify-between py-4 px-20">
   <a href="/" class="text-xl font-bold">
     <img src="/logo/black.svg" alt="Logo" class="h-10" />
   </a>
