--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,19 +13,9 @@ import Navbar from "./Navbar.astro";
 		<meta name="generator" content={Astro.generator} />
 		<title>Fiber Network</title>
 	</head>
-	<body class="text-text-primary">
+	<body class="text-text-primary m-0 w-full h-full bg-gradient-to-b from-purple-light via-cyan-light to-yellow-light">
 		<Navbar />
 		<slot />
 		<Footer />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-		background-color: #E6D3FF;
-	}
-</style>
