fix: mobile padding

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -2,7 +2,7 @@
 // Component Logic (if needed)
 ---
 
-<div class="p-20">
+<div class="p-5 md:p-20">
   <div
     class="bg-cyan rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-6"
   >
