--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="rounded-xl py-20 px-20 mb-8">
+<div class="rounded-xl p-5 md:p-20 mb-8">
   <div>
     <h2
       class="bg-blue text-center rounded-xl p-[20px] mb-6 border-1 border-border-black"
