--- a/src/pages/build.astro
+++ b/src/pages/build.astro
@@ -51,7 +51,7 @@ const buildCaseList = [
 ---
 
 <Layout>
-  <div class="py-20 px-20">
+  <div class="p-5 md:p-20">
     <div
       class="bg-cyan rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-6"
     >
@@ -119,7 +119,7 @@ const buildCaseList = [
   </div>
   <ScrollList items={scrollingItems} isPrimary={false} />
 
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 my-8 p-20">
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 my-8 p-5 md:p-20">
     {
       buildCaseList.map((item) => (
         <CaseCard
