--- a/src/pages/milestones.astro
+++ b/src/pages/milestones.astro
@@ -4,7 +4,7 @@ import Timeline from "../components/Timeline.astro";
 ---
 
 <Layout>
-  <div class="pt-20 px-20">
+  <div class="pt-10 px-10 md:pt-20 md:px-20">
     <div
       class="bg-cyan rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-6"
     >
