--- a/src/pages/network.astro
+++ b/src/pages/network.astro
@@ -21,15 +21,15 @@ import Layout from "../layouts/Layout.astro";
 
     <div class="my-4 grid grid-cols-1 lg:grid-cols-3 gap-2">
       <div
-        class={`overflow-hidden rounded-xl flex flex-col gap-4 justify-center align-middle items-center bg-yellow border-1 border-border-black`}
+        class={`overflow-hidden rounded-xl flex flex-col gap-4 justify-end align-middle items-middle bg-yellow border-1 border-border-black`}
       >
         <div
           class="px-5 py-10 flex flex-col gap-4 justify-center align-middle items-center"
         >
-          <h3 class="text-blue-dark">Stablecoin Support</h3>
+          <h3 class="text-blue-dark text-center">Stablecoin Support</h3>
           <div class="text-body1">
             <a
-              href="http://"
+              href="http://www.rgbppfans.com"
               class="text-blue-dark underline"
               target="_blank"
               rel="noopener noreferrer">RGB++ Stablecoins</a
@@ -38,19 +38,19 @@ import Layout from "../layouts/Layout.astro";
         </div>
 
         <div
-          class="w-full bg-yellow-light rounded-b-2xl flex justify-center p-4"
+          class="w-full bg-yellow-light rounded-b-2xl flex justify-center p-4 border-t-1 border-border-black"
         >
           <img src="/imgs/hybrid-network/rgbpp.png" alt="" />
         </div>
       </div>
 
       <div
-        class={`overflow-hidden rounded-xl flex flex-col gap-4 justify-center align-middle items-center bg-yellow border-1 border-border-black`}
+        class={`overflow-hidden rounded-xl flex flex-col gap-4 justify-end align-middle items-center bg-yellow border-1 border-border-black`}
       >
         <div
           class="px-5 py-10 flex flex-col gap-4 justify-center align-middle items-center"
         >
-          <h3 class="text-blue-dark">Cross-Network Atomic Swaps</h3>
+          <h3 class="text-blue-dark text-center">Cross-Network Atomic Swaps</h3>
           <div class="text-body1">
             Edge nodes enable secure, instant exchanges across Lightning and
             Fiber networks.
@@ -58,7 +58,7 @@ import Layout from "../layouts/Layout.astro";
         </div>
 
         <div
-          class="w-full bg-yellow-light rounded-b-2xl flex justify-center p-4"
+          class="w-full bg-yellow-light rounded-b-2xl flex justify-center p-4 border-t-1 border-border-black"
         >
           <img src="/imgs/hybrid-network/hub-node.png" alt="" />
         </div>
@@ -68,9 +68,9 @@ import Layout from "../layouts/Layout.astro";
         class={`overflow-hidden rounded-xl flex flex-col gap-4 justify-center align-middle items-center bg-yellow border-1 border-border-black`}
       >
         <div
-          class="px-5 py-10 flex flex-col gap-4 justify-center align-middle items-center"
+          class="px-5 py-10 flex flex-col gap-4 justify-end align-middle items-center"
         >
-          <h3 class="text-blue-dark">Network Enhancement</h3>
+          <h3 class="text-blue-dark text-center">Network Enhancement</h3>
           <div class="text-body1">
             The combined infrastructure improves network connectivity and boosts
             overall liquidity.
@@ -78,7 +78,7 @@ import Layout from "../layouts/Layout.astro";
         </div>
 
         <div
-          class="w-full bg-yellow-light rounded-b-2xl flex justify-center p-4"
+          class="w-full bg-yellow-light rounded-b-2xl flex justify-center p-4 border-t-1 border-border-black"
         >
           <img src="/imgs/hybrid-network/boost.png" alt="" />
         </div>
