fix mobile info-check

--- a/src/components/Compare.astro
+++ b/src/components/Compare.astro
@@ -24,12 +24,11 @@
         </tr>
         <tr>
           <td class="relative py-5 px-[10px] text-left">
-            <div class="flex justify-start gap-1 items-center align-middle">Watchtower Storage 
-              <div class="hidden absolute bottom-12 min-w-[250px] left-[100px] p-2 rounded bg-black text-white text-body2" id="tooltip">
+            <div>Watchtower Storage <img id="info-check" class="cursor-pointer inline-block" src="/icons/info.svg" alt="">
+              <div class="hidden absolute bottom-12 min-w-[280px] left-[100px] p-2 rounded bg-black text-white text-body2" id="tooltip">
                 <div>O(n): Storage grows with updates</div>
                 <div>O(1): Constant storage</div>
               </div>
-              <img id="info-check" class="cursor-pointer" src="/icons/info.svg" alt="">
             </div>
           </td>
           <td class="p-5 text-center bg-cyan-light">O(1)</td>
