--- a/src/pages/build.astro
+++ b/src/pages/build.astro
@@ -130,11 +130,9 @@ const buildCaseList = [
       ))
     }
     <div
-      class={`p-5 h-[303px] rounded-xl flex flex-col justify-center align-middle items-start gap-10 bg-purple border-1 border-border-black`}
+      class={`p-5 md:px-5 md:py-10 rounded-xl flex flex-col justify-center align-middle items-start gap-10 bg-purple border-1 border-border-black`}
     >
-      <>
-        <h3>What Will You Build?</h3>
-      </>
+      <h3>What Will You Build?</h3>
     </div>
   </div>
 
