--- a/src/pages/network.astro
+++ b/src/pages/network.astro
@@ -24,10 +24,10 @@ import Layout from "../layouts/Layout.astro";
         class={`overflow-hidden rounded-xl flex flex-col gap-4 justify-end align-middle items-middle bg-yellow border-1 border-border-black`}
       >
         <div
-          class="px-5 py-10 flex flex-col gap-4 justify-center align-middle items-center"
+          class="flex-grow px-5 py-5 md:py-10 justify-center align-middle items-center"
         >
           <h3 class="text-blue-dark text-center">Stablecoin Support</h3>
-          <div class="text-body1">
+          <div class="text-body1 mt-5">
             <a
               href="http://www.rgbppfans.com"
               class="text-blue-dark underline"
@@ -48,10 +48,10 @@ import Layout from "../layouts/Layout.astro";
         class={`overflow-hidden rounded-xl flex flex-col gap-4 justify-end align-middle items-center bg-yellow border-1 border-border-black`}
       >
         <div
-          class="px-5 py-10 flex flex-col gap-4 justify-center align-middle items-center"
+          class="flex-grow px-5 py-5 md:py-10 justify-center align-middle items-center"
         >
           <h3 class="text-blue-dark text-center">Cross-Network Atomic Swaps</h3>
-          <div class="text-body1">
+          <div class="text-body1 mt-5">
             Edge nodes enable secure, instant exchanges across Lightning and
             Fiber networks.
           </div>
@@ -65,13 +65,13 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <div
-        class={`overflow-hidden rounded-xl flex flex-col gap-4 justify-center align-middle items-center bg-yellow border-1 border-border-black`}
+        class={`overflow-hidden rounded-xl flex flex-col gap-4 justify-end align-middle items-center bg-yellow border-1 border-border-black`}
       >
         <div
-          class="px-5 py-10 flex flex-col gap-4 justify-end align-middle items-center"
+          class="flex-grow px-5 py-5 md:py-10 justify-end align-middle items-center"
         >
           <h3 class="text-blue-dark text-center">Network Enhancement</h3>
-          <div class="text-body1">
+          <div class="text-body1 mt-5">
             The combined infrastructure improves network connectivity and boosts
             overall liquidity.
           </div>
