fix feature card padding

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -38,7 +38,7 @@ const features = [
 {/* Features Grid */}
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 my-8 p-5 md:p-20">
   <div
-    class={`p-5 h-[303px] rounded-xl flex flex-col justify-center align-middle items-start bg-blue-dark text-white border-1 border-border-black`}
+    class={`p-5 h-[212px] md:h-[303px] rounded-xl flex flex-col justify-center align-middle items-start bg-blue-dark text-white border-1 border-border-black`}
   >
     <h2>Highlighted<br /> Features</h2>
   </div>
