fix mobile width

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -28,7 +28,7 @@
         class="flex gap-6 justify-center items-center"
       >
         <h3>Lightpaper</h3>
-        <img src="/icons/link.svg" />
+        <img class="w-6 md:w-10" src="/icons/link.svg" />
       </a>
     </div>
   </div>
