--- a/src/components/ScrollList.astro
+++ b/src/components/ScrollList.astro
@@ -10,19 +10,19 @@ const repeatedItems = [...items, ...items]; // Duplicate items for seamless loop
 ---
 
 <div
-  class={`overflow-hidden relative border border-border-black ${isPrimary ? "bg-yellow-light" : "bg-blue-light"}`}
+  class={`h-[56px] lg:h-[61px] flex flex-col align-middle items-center justify-center overflow-hidden relative border-y-1 border-border-black ${isPrimary ? "bg-yellow-light" : "bg-blue-light"}`}
 >
   <div
-    class="animate-scrolling whitespace-nowrap w-max transition-transform duration-20000 py-2"
+    class="animate-scrolling whitespace-nowrap w-max transition-transform duration-20000 flex align-middle items-center justify-center gap-5"
   >
     {
       repeatedItems.map((item, index) => (
-        <span class="inline-block px-4 py-2 text-lg font-semibold">
+        <h4 class="inline-block">
           {item}
           {index !== repeatedItems.length - 1 && (
-            <span class="mx-2 text-2xl">✦</span>
+            <span class="mx-5">✦</span>
           )}
-        </span>
+        </h4>
       ))
     }
   </div>
