--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -9,7 +9,7 @@ import ExpandFooter from "./ExpandFooter.astro";
   <!-- 固定的 Footer -->
   <div
     id="collapsed-footer"
-    class="fixed bottom-0 center left-1/2 -translate-x-1/2 w-fit p-4 rounded-t-2xl bg-black text-sm flex align-middle items-center justify-center gap-2 py-3 transition-all duration-300 ease-in-out"
+    class="fixed bottom-0 center left-1/2 -translate-x-1/2 w-[375px] p-4 rounded-t-2xl bg-black text-sm flex align-middle items-center justify-center gap-2 py-3 transition-all duration-300 ease-in-out"
   >
     Join Our Community •
     <a href="#" class="hover:opacity-80 w-6">
