refactor banner wording

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -7,9 +7,9 @@
     class="bg-cyan rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-6"
   >
     <h1>
-      <span class="text-blue-dark">Fiber Network</span> is Making
+      <span class="text-blue-dark">Fiber Network</span> is Scaling
     </h1>
-    <h1>Satoshi's Vision a Reality</h1>
+    <h1>Satoshi's P2P Ecash Vision</h1>
   </div>
   <div
     class="flex flex-col lg:flex-row justify-between w-full text-white gap-1"
@@ -17,7 +17,7 @@
     <div
       class="bg-purple-dark p-[20px] rounded-xl border-1 border-border-black flex justify-center"
     >
-      <h3>The Next Generation Common Lightning Network</h3>
+      <h3>A Programmable P2P Finance Network</h3>
     </div>
     <div
       id="cursor-target"
