--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,11 +45,9 @@
 	--font-body: "Articulat CF", "Medium";
 
 	/* Breakpoints */
-	--breakpoint-sm: 640px;
+	--breakpoint-sm: 0px;
 	--breakpoint-md: 768px;
-	--breakpoint-lg: 1024px;
-	--breakpoint-xl: 1280px;
-	--breakpoint-2xl: 1536px;
+	--breakpoint-lg: 1280px;
 }
 
 /* Base Styles */
@@ -59,36 +57,36 @@
 	}
 
 	h1 {
-		@apply font-heading font-bold lg:text-[88px] lg:leading-[100%] md:text-[56px] md:leading-[100%] sm:text-[36px] sm:leading-[100%];
+		@apply font-heading font-bold lg:text-[88px] lg:leading-[100%] md:text-[56px] md:leading-[100%] text-[36px] leading-[100%];
 	}
 
 	h2 {
-		@apply font-heading font-bold lg:text-[48px] lg:leading-[120%] md:text-[36px] md:leading-[120%] sm:text-[32px] sm:leading-[120%];
+		@apply font-heading font-bold lg:text-[48px] lg:leading-[120%] md:text-[36px] md:leading-[120%] text-[32px] leading-[120%];
 	}
 
 	h3 {
-		@apply font-heading font-bold lg:text-[36px] lg:leading-[120%] md:text-[28px] md:leading-[120%] sm:text-[20px] sm:leading-[120%];
+		@apply font-heading font-bold lg:text-[36px] lg:leading-[120%] md:text-[28px] md:leading-[120%] text-[20px] leading-[120%];
 	}
 
 	h4 {
-		@apply font-heading font-bold lg:text-[24px] lg:leading-[120%] md:text-[20px] md:leading-[120%] sm:text-[18px] sm:leading-[120%];
+		@apply font-heading font-bold lg:text-[24px] lg:leading-[120%] md:text-[20px] md:leading-[120%] text-[18px] leading-[120%];
 	}
 }
 
 @layer utilities {
 	.text-body1 {
-		@apply font-body lg:text-[20px] lg:leading-[160%] md:text-[18px] md:leading-[160%] sm:text-[16px] sm:leading-[160%];
+		@apply font-body lg:text-[20px] lg:leading-[160%] md:text-[18px] md:leading-[160%] text-[16px] leading-[160%];
 	}
 	.text-body2 {
-		@apply font-body lg:text-[16px] lg:leading-[160%] md:text-[14px] md:leading-[160%] sm:text-[14px] sm:leading-[160%];
+		@apply font-body lg:text-[16px] lg:leading-[160%] md:text-[14px] md:leading-[160%] text-[14px] leading-[160%];
 	}
 	.text-caption {
-		@apply font-body lg:text-[14px] lg:leading-[120%] md:text-[12px] md:leading-[120%] sm:text-[12px] sm:leading-[120%];
+		@apply font-body lg:text-[14px] lg:leading-[120%] md:text-[12px] md:leading-[120%] text-[12px] leading-[120%];
 	}
 	.text-footnote {
-		@apply font-body lg:text-[12px] lg:leading-[120%] md:text-[12px] md:leading-[120%] sm:text-[12px] sm:leading-[120%];
+		@apply font-body lg:text-[12px] lg:leading-[120%] md:text-[12px] md:leading-[120%] text-[12px] leading-[120%];
 	}
 	.text-button {
-		@apply font-body lg:text-[16px] lg:leading-[100%] md:text-[14px] md:leading-[100%] sm:text-[14px] sm:leading-[100%];
+		@apply font-body lg:text-[16px] lg:leading-[100%] md:text-[14px] md:leading-[100%] text-[14px] leading-[100%];
 	}
 }
