--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,9 +24,9 @@ const scrollingItems = [
   <Banner />
   <ScrollList items={scrollingItems} />
   <HowItWorks />
-  <ScrollList items={scrollingItems} isPrimary={false} />
+  <ScrollList items={scrollingItems} level="secondary" />
   <Features />
   <Compare />
-  <ScrollList items={scrollingItems} isPrimary={false} />
+  <ScrollList items={scrollingItems} level="tertiary" />
   <FAQ />
 </Layout>
